--- a/requirements.txt
+++ b/requirements.txt
@@ -63,3 +63,7 @@ google-api-core==2.27.0
 googleapis-common-protos==1.71.0 
 proto-plus==1.26.1 
 protobuf==6.33.0
+markdown-it-py==4.0.0 
+mdurl==0.1.2 
+pygments==2.19.2 
+rich==14.2.0
