--- a/requirements.txt
+++ b/requirements.txt
@@ -75,3 +75,21 @@ pytest==8.4.2
 pytest-asyncio==1.2.0
 apscheduler==3.11.1 
 tzlocal==5.3.1
+autograd==1.8.0 
+autograd-gamma==0.5.0 
+contourpy==1.3.3 
+cycler==0.12.1 
+fonttools==4.60.1 
+formulaic==1.2.1 
+interface-meta==1.3.0 
+joblib==1.5.2 
+kiwisolver==1.4.9 
+lifelines==0.30.0 
+lightgbm==4.6.0 
+matplotlib==3.10.7 
+narwhals==2.12.0 
+pillow==12.0.0 
+pyparsing==3.2.5 
+scikit-learn==1.7.2 
+threadpoolctl==3.6.0 
+wrapt==2.0.1
