--- a/requirements.txt
+++ b/requirements.txt
@@ -85,7 +85,6 @@ interface-meta==1.3.0
 joblib==1.5.2 
 kiwisolver==1.4.9 
 lifelines==0.30.0 
-lightgbm==4.6.0 
 matplotlib==3.10.7 
 narwhals==2.12.0 
 pillow==12.0.0 
@@ -93,3 +92,7 @@ pyparsing==3.2.5
 scikit-learn==1.7.2 
 threadpoolctl==3.6.0 
 wrapt==2.0.1
+catboost==1.2.8 
+graphviz==0.21 
+plotly==6.5.0 
+seaborn==0.13.2
