--- a/env.example
+++ b/env.example
@@ -13,3 +13,8 @@ GEMINI_MODEL=gemini-2.5-flash
 
 WEBHOOK_PORT=8000
 
+# Forecast Snapshot Maintenance Configuration
+FORECAST_SNAPSHOT_RETENTION_DAYS=730
+FORECAST_SNAPSHOT_CRON_HOUR_UTC=3
+FORECAST_SNAPSHOT_CRON_MINUTE_UTC=10
+
